# dufomap

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  dufomap.cpp  index.html  main.py
.github/workflows/: issue_stale.yaml
assets/: config.toml
data/: dufomap.toml
include/ufo/algorithm/: algorithm.hpp
include/ufo/container/: range.hpp  range_map.hpp  range_set.hpp  small_vector.hpp
include/ufo/geometry/: README.md  aabb.hpp  aabc.hpp  bounding_volume.hpp  capsule.hpp  closest_point.hpp  cone.hpp  contains.hpp  cylinder.hpp  ellipsoid.hpp  frustum.hpp  geometry.hpp  helper.hpp  intersects.hpp  line.hpp  line_segment.hpp  minimum_distance.hpp  obb.hpp  plane.hpp  point.hpp  ray.hpp  sphere.hpp  triangle.hpp
include/ufo/map/: bit_set.hpp  buffer.hpp  code.hpp  code_or_index.hpp  index.hpp  io.hpp  key.hpp  node.hpp  point.hpp  point_cloud.hpp  types.hpp  ufomap.hpp
include/ufo/map/color/: color.hpp  color_map.hpp  color_predicate.hpp
include/ufo/map/count/: count_map.hpp  count_predicate.hpp
include/ufo/map/distance/: distance_map.hpp  distance_node.hpp  distance_predicate.hpp
include/ufo/map/empty/: empty_map.hpp
include/ufo/map/free/: free_map.hpp  free_predicate.hpp
include/ufo/map/integration/: grid.hpp  integration.hpp  integration_impl.hpp  integration_parameters.hpp  integration_point.hpp  integration_point_cloud.hpp  misses.hpp
include/ufo/map/integration/misses/: 1.hpp  2.hpp
include/ufo/map/intensity/: intensity_map.hpp  intensity_predicate.hpp
include/ufo/map/label/: label_map.hpp  label_predicate.hpp
include/ufo/map/labels/: label_set.hpp  labels_map.hpp  labels_predicate.hpp
include/ufo/map/occupancy/: occupancy_map.hpp  occupancy_predicate.hpp
include/ufo/map/octree/: octree.hpp  octree_iterator.hpp  octree_map.hpp  octree_predicate.hpp
include/ufo/map/point/: point_map.hpp
include/ufo/map/points/: points_map.hpp  points_predicate.hpp
include/ufo/map/points_color/: points_color_map.hpp  points_color_predicate.hpp
include/ufo/map/predicate/: predicate.hpp  satisfies.hpp  spatial.hpp
include/ufo/map/ray_caster/: ray_caster.hpp
include/ufo/map/reflection/: reflection.hpp  reflection_map.hpp  reflection_predicate.hpp
include/ufo/map/seen_free/: seen_free_map.hpp  seen_free_predicate.hpp
include/ufo/map/semantic/: semantic.hpp  semantic_map.hpp  semantic_predicate.hpp
include/ufo/map/semantics/: asd.cpp  semantic.hpp  semantic_map.hpp  semantic_mapping.hpp  semantic_node.hpp  semantic_predicate.hpp  semantic_propagation.hpp  semantics copy.hpp  semantics.hpp  semantics_reference.hpp
include/ufo/map/surfel/: surfel.hpp  surfel_map.hpp  surfel_predicate.hpp  surfel_util.hpp
include/ufo/map/time/: time_map.hpp  time_predicate.hpp
include/ufo/map/value/: value_map.hpp  value_predicate.hpp
include/ufo/math/: logit.hpp  pose6.hpp  quaternion.hpp  util.hpp  vector3.hpp
include/ufo/util/: enum.hpp  iterator_wrapper.hpp  timing.hpp  type_traits.hpp
resources/elements/: app.css  app.js
resources/elements/cocoen/: cocoen copy.js  cocoen.esm.js  cocoen.esm.js.map  cocoen.js  cocoen.js.map  interactive_demo.js
resources/elements/utils/: zoom.js
src/: dufomap.cpp  fix_pcd.cpp  indicators.hpp
src/map/: io.cpp
